<resources>
    <string name="app_name">Desafio4</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="search_games">Search Games</string>
    <string name="created_at">Created at</string>
    <string name="description">Description</string>
    <string name="save_game">Save Game</string>
    <string name="campo_obrigatorio">%1$s is Required</string>
    <string name="formato_email_invalido">Invalid Email Format</string>
</resources>