<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.CadastroActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/login_card"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfCadastroNome"
            android:layout_width="match_parent"
            style="@style/TextInputCustom"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="26dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edCadastroNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/editText"
                android:paddingStart="2dp"
                android:paddingBottom="2dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfCadastroEmail"
            android:layout_width="match_parent"
            style="@style/TextInputCustom"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edCadastroEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/editText"
                android:paddingStart="2dp"
                android:paddingBottom="2dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfCadastroSenha"
            android:layout_width="match_parent"
            style="@style/TextInputCustom"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edCadastroSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/editText"
                android:paddingStart="2dp"
                android:paddingBottom="2dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfCadastroRepeteSenha"
            android:layout_width="match_parent"
            style="@style/TextInputCustom"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edCadastroRepeteSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/editText"
                android:paddingStart="2dp"
                android:paddingBottom="2dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCadastroCriarConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="20sp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>