<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.EditarJogoActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditarJogoCapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/llEditarJogoContainer"
        app:layout_constraintBottom_toTopOf="@id/llEditarJogoContainer"
        app:layout_constraintStart_toStartOf="@id/llEditarJogoContainer"
        app:layout_constraintEnd_toEndOf="@id/llEditarJogoContainer"
        app:srcCompat="@drawable/ic_baseline_photo_camera_48"
        app:fabCustomSize="100dp"
        app:tint="@color/white"
        app:maxImageSize="40dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivEditarJogoCapa"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="@id/fabEditarJogoCapa"
        app:layout_constraintBottom_toBottomOf="@id/fabEditarJogoCapa"
        app:layout_constraintStart_toStartOf="@id/fabEditarJogoCapa"
        app:layout_constraintEnd_toEndOf="@id/fabEditarJogoCapa"
        android:visibility="visible"
        android:scaleType="centerCrop"
        tools:src="@drawable/card_example"
        android:translationZ="10dp"
        />

    <LinearLayout
        android:id="@+id/llEditarJogoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/login_card"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfEditarJogoNome"
            android:layout_width="match_parent"
            style="@style/TextInputCustom"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="26dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEditarJogoNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textColor="@color/editText"
                android:paddingStart="2dp"
                android:paddingBottom="2dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfEditarJogoAno"
            android:layout_width="match_parent"
            style="@style/TextInputCustom"
            android:layout_height="wrap_content"
            android:hint="@string/created_at"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEditarJogoAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/editText"
                android:paddingStart="2dp"
                android:paddingBottom="2dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfEditarJogoDescricao"
            android:layout_width="match_parent"
            style="@style/TextInputCustom"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEditarJogoDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@color/editText"
                android:maxLines="3"
                android:ellipsize="end"
                android:paddingStart="2dp"
                android:paddingBottom="2dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEditarJogoSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_game"
            android:textSize="20sp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="12dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>